# NetSentinel

./: CMakeLists.txt  README.md  install.sh
include/: connection.h  daemon.h  firewall.h  geoip.h  json_export.h  output.h  process.h  risk.h  scanner.h  utils.h
platform/linux/: lin_firewall.cpp  lin_firewall.h  lin_proc.cpp  lin_proc.h  linux_scanner.cpp  linux_scanner.h  signature.cpp  signature.h
platform/windows/: signature.cpp  win_firewall.cpp  win_firewall.h  win_proc.cpp  windows_scanner.cpp  windows_scanner.h
prebuiltwindows/: CMakeCache.txt  build.ninja  cmake_install.cmake
src/: daemon.cpp  firewall.cpp  geoip.cpp  json_export.cpp  main.cpp  output.cpp  risk.cpp  scanner.cpp  utils.cpp
tests/: test_geoip.cpp  test_main.cpp  test_risk.cpp  test_utils.cpp
